<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_estates">

    <fragment
        android:id="@+id/nav_estates"
        android:name="com.example.bezbroker.ui.EstatesFragment"
        android:label="@string/menu_estates"
        tools:layout="@layout/fragment_estates" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.bezbroker.ui.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.bezbroker.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>